Drop quotes from what-if

--- a/submission/main.tex
+++ b/submission/main.tex
@@ -148,7 +148,7 @@
     parameters are recovered from the data via parameterisation and the
     Wasserstein distance. This model is then used to conduct an informative
     analysis of the underlying queuing system and the needs of the population
-    under study through several ‘what-if’ scenarios.
+    under study through several what-if scenarios.
 
     The analyses used to form and study this model consider, in effect, all
     types of patient arrivals and how those types impact the system. With that,
