--- a/submission/main.tex
+++ b/submission/main.tex
@@ -206,7 +206,7 @@ paper~\cite{Wilde2020github}.
 \subsection{Literature review}\label{subsec:review}
 
 Given the subject matter of this work, the relevant literature spans much of
-operational research in healthcare and the focus of this review is on the
+operational research in healthcare, and the focus of this review is on the
 critical topics of segmentation analysis, queuing models applied to hospital
 systems, and the handling of missing or incomplete data for such queues.
 
@@ -338,7 +338,7 @@ The Cwm Taf Morgannwg UHB provided the dataset used in this work. The
 dataset contains an administrative summary of 5,231 patients presenting COPD
 from February 2011 through March 2019 totalling 10,861 spells. A patient
 (hospital) spell is defined as the continuous stay of a patient using a hospital
-bed on premises controlled by a health care provider and is made up of one or
+bed on premises controlled by a healthcare provider and is made up of one or
 more patient episodes~\cite{NHS2020}. The following attributes describe the
 spells included in the dataset:
 \begin{itemize}
@@ -355,10 +355,10 @@ spells included in the dataset:
         rehabilitation (PR), specialist nursing (SN), and both interventions;
     \item Charlson Comorbidity Index (CCI) contributions from several long term
         conditions (LTCs) as well as indicators for some other conditions such
-        as sepsis and obesity. CCI has been shown to be useful in anticipating
-        hospital utilisation as a measure for the burdens associated with
+        as sepsis and obesity. CCI is useful in anticipating hospital
+        utilisation as a measure for the burdens associated with
         comorbidity~\cite{Simon2011};
-    \item Rank under the 2019 Welsh Index of Multiple Deprivation (WIMD)
+    \item Rank under the 2019 Welsh Index of Multiple Deprivation (WIMD),
         indicating relative deprivation of the postcode area the patient lives
         in which is known to be linked to COPD prevalence and
         severity~\cite{Collins2018,Sexton2016,Steiner2017}.
@@ -399,10 +399,10 @@ values for \(k\) from two to 10. This range was chosen based on what may be
 considered feasibly informative to stakeholders. The knee point detection
 algorithm can be considered a deterministic version of the widely known `elbow
 method' for determining the number of clusters. Applying this algorithm
-revealed an optimal value for \(k\) of four but both three and five clusters
+revealed an optimal value for \(k\) of four, but both three and five clusters
 were considered. Both of these cases were eliminated due to a lack of clear
 separation in the characteristics of the clusters. Additionally, the
-initialisation method used for \(k\)-prototypes was that presented
+initialisation method used for \(k\)-prototypes was presented
 in~\cite{Wilde2020} as it was found to give an improvement in the clustering
 over other initialisation methods.
 
@@ -467,9 +467,9 @@ summarised succinctly:
 \begin{itemize}
     \item Cluster 0 represents those spells with relatively low clinical
         complexity but high resource requirements. The mean spell cost is almost
-        four times the population average and the shortest spell is almost two
+        four times the population average, and the shortest spell is almost two
         weeks long. Moreover, the median number of COPD-related admissions in
-        the last year is elevated indicating that patients presenting in this
+        the last year is elevated, indicating that patients presenting in this
         way require more interactions with the system.
     \item Cluster 1, the second-largest segment, represents the spells with
         complex clinical profiles despite lower resource requirements.
@@ -539,9 +539,9 @@ Figure~\ref{fig:cluster_los} demonstrates the different bed resource
 requirements well for each cluster --- better than Table~\ref{tab:summary} might
 --- in that the difference between the clusters is not just a matter of
 varying means and ranges, but entirely different shapes to their respective
-distributions. Indeed, they are all positively skewed but there is no real
+distributions. Indeed, they are all positively skewed, but there is no real
 consistency beyond that. When comparing this to
-Figure~\ref{fig:intervention_los}, there is undoubtedly some variety but the
+Figure~\ref{fig:intervention_los}, there is undoubtedly some variety, but the
 overall shapes of the distributions are generally similar. The exception is the
 spells with no COPD intervention where binning could not improve the
 visualisation due to the widespread distribution of their lengths of stay.
@@ -613,7 +613,7 @@ distributions regardless of intervention.
 \end{figure}
 
 Figures~\ref{fig:ltcs}~and~\ref{fig:icds} show the proportions of each grouping
-presenting levels of concurrent LTCs and ICDs respectively. By exposing the
+presenting levels of concurrent LTCs and ICDs, respectively. By exposing the
 distribution of these attributes, some notion of the clinical complexity for
 each cluster can be captured better than with Table~\ref{tab:summary} alone. In
 Figure~\ref{fig:cluster_ltcs}, for instance, there are distinct LTC count
@@ -621,7 +621,7 @@ profiles among the clusters: Cluster 0 is typical of the population; Cluster 1
 shows that no patient presented COPD solely as an LTC in their spells, and more
 than half presented at least three; Cluster 2 is similar in form to the
 population but is severely biased towards patients presenting COPD as the only
-LTC; Cluster 3 is the most uniformly spread among the four bins despite
+LTC; Cluster 3 is the most uniformly spread among the four bins despite the
 increased length of stay and CCI suggesting a diverse array of patients in
 terms of their long term medical needs.
 
@@ -637,7 +637,7 @@ However, little can be drawn from the intervention counterparts to these figures
 regarding the corresponding spells. One thing of note is that patients receiving
 both interventions for their COPD (or either, in fact) have disproportionately
 fewer LTCs and concurrent ICDs when compared to the population. Aside from this,
-the profiles of each intervention are all similar to one another.
+the profiles of each intervention are similar to one another.
 
 As discussed earlier, the purpose of this work is to construct a queuing model
 for the data described here. Insights have already been gained into the needs of
@@ -675,14 +675,14 @@ Under this model, the following assumptions are made:
         arrivals would be sent to another suitable ward or unit. As this
         hypothetical ward represents COPD patients potentially throughout a
         hospital, this assumption is not held.
-    \item Without the availability of expert clinical knowledge, a first-in
-        first-out service policy is employed in place of some patient priority 
-        framework.
+    \item Without the availability of expert clinical knowledge, a
+        first-in-first-out service policy is employed in place of some patient
+        priority framework.
 \end{enumerate}
 
 Each group of patients has its arrival distribution, the parameter of which is
 the reciprocal of the mean inter-arrival times for that group. This parameter
-and is denoted by \(\lambda_i\) for each cluster \(i\).
+is denoted by \(\lambda_i\) for each cluster \(i\).
 
 Like arrivals, each group of patients has its service time distribution.
 Without full details of the process order or idle periods during a spell, some
@@ -732,7 +732,7 @@ and \(V\) is defined as:
 \end{equation}
 
 \noindent where \(F\) and \(G\) are the cumulative density functions of \(U\)
-and \(V\) respectively. A proof of~\eqref{eq:wasserstein} is presented
+and \(V\), respectively. A proof of~\eqref{eq:wasserstein} is presented
 in~\cite{Ramdas2017}. The parameter set with the smallest maximum distance
 between any cluster's simulated system time distribution and the overall
 observed length of stay distribution is then taken to be the most appropriate.
@@ -980,16 +980,15 @@ showing a precise fit by the best parameters across the board.
     stay (LOS).}\label{tab:comparison}
 \end{table}
 
-In this section, the clustering enriched the overall queuing model and was used
-to recover the parameters for several classes within that queue to a high
-standard. Now, using this model, the next section details an investigation into
-the underlying system by adjusting the parameters of the queue with the
-clustering.
+In this section, the previously identified clustering enriched the overall
+queuing model and was used to recover the parameters for several classes within
+that. Now, using this model, the next section details an investigation into the
+underlying system by adjusting the parameters of the queue with the clustering.
 
 \section{Adjusting the queuing model}\label{sec:scenarios}
 
-This section is comprised of several what-if scenarios --- a classic component
-of healthcare operational research --- under the novel parameterisation of the
+This section comprises several what-if scenarios --- a classic component of
+healthcare operational research --- under the novel parameterisation of the
 queue established in Section~\ref{sec:model}. The outcomes of interest in this
 work are server (resource) utilisation and system times. These metrics capture
 the driving forces of cost and the state of the system. Specifically, the
@@ -1125,7 +1124,7 @@ hospital) regardless of their condition, putting added strains on the system.
 Meanwhile, it appears that there is no tangible change in relative system times
 given an increase in the number of servers. This indicates that the model
 carries sufficient resources to cater to the population under normal
-circumstances, and that adding service capacity will not necessarily improve
+circumstancesand that adding service capacity will not necessarily improve
 system times.
 
 Again, Figure~\ref{fig:servers_util} shows that there is a substantial change in
