Slight rewording of abstract.

--- a/submission/main.tex
+++ b/submission/main.tex
@@ -138,10 +138,10 @@
     which the patients interact. This approach is composed of a novel
     combination of often distinct modes of analysis: segmentation, operational
     queuing theory, and the recovery of parameters from incomplete data. By
-    combining these methods as presented here, demonstrates that potential
-    limitations around the availability of fine-grained data can be overcome in
-    operational research. Thus, finding useful operational results despite using
-    only administrative data. 
+    combining these methods as presented here, this work demonstrates that
+    potential limitations around the availability of fine-grained data can be
+    overcome. Thus, finding useful operational results despite using only
+    administrative data. 
 
     The paper begins by finding a useful clustering of the population from this
     granular data that feeds into a multi-class \(M/M/c\) model, whose
