Add keyword section.

--- a/submission/main.tex
+++ b/submission/main.tex
@@ -160,6 +160,10 @@
     hospital.
 \end{abstract}
 
+\section*{Keywords}
+
+OR in health services; machine learning; queueing
+
 
 \section{Introduction}\label{sec:intro}
 
